@@ -12,3 +12,4 @@ pm_to_blib*
 cover_db
 pod2htm*.tmp
 Locale-Wolowitz-*
+.build
